syntax = "proto3";

package api.tenant.v1;

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
option go_package = "github.com/goxiaoy/go-saas-kit/saas/api/tenant/v1;v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
		title: "Saas Service";
		version: "1.0";
	};
};

service TenantService {
	rpc CreateTenant (CreateTenantRequest) returns (Tenant){
		option (google.api.http) = {
			post: "/v1/saas/tenant"
			body: "*"
		};
	};
	rpc UpdateTenant (UpdateTenantRequest) returns (Tenant){
		option (google.api.http) = {
			put: "/v1/saas/tenant/{tenant.id}"
			body: "*"
			additional_bindings: [
				{
					patch: "/v1/saas/tenant/{tenant.id}"
					body: "*"
				}
			]
		};
	}
	rpc DeleteTenant (DeleteTenantRequest) returns (DeleteTenantReply){
		option (google.api.http) = {
			delete: "/v1/saas/tenant/{id}"
		};
	}

	rpc GetTenant (GetTenantRequest) returns (Tenant){
		option (google.api.http) = {
			get: "/v1/saas/tenant/{id_or_name}"
		};
	}

	rpc ListTenant (ListTenantRequest) returns (ListTenantReply){
		option (google.api.http) = {
			get: "/v1/saas/tenants"
			additional_bindings:{
				post: "/v1/saas/tenant/list"
				body: "*"
			}
		};
	}
}

message CreateTenantRequest {
	string name=2 [(validate.rules).string.min_len=1];
	string display_name=3;
	string region = 4;
}

message UpdateTenantRequest {
	UpdateTenant tenant=1  [(validate.rules).message.required=true];
	google.protobuf.FieldMask update_mask = 2;
}


message UpdateTenant{
	string id=1 [(validate.rules).string.min_len=1];
	string name =2 [(validate.rules).string.min_len=1];
	string display_name=3;

	repeated TenantConnectionString conn=7;
	repeated TenantFeature features=8;
}

message DeleteTenantRequest {
	string id=1;
}
message DeleteTenantReply {
	string id=1;
}

message GetTenantRequest {
	string id_or_name=1;
}



message TenantFilter{
	repeated string id_in=1;
	repeated string name_in =2;
	string name_like=3;
	repeated string region_in=4;

}

message ListTenantRequest {
	int32 page_offset =1;
	int32 page_size = 2;
	string search = 3;
	repeated string sort =4;
	google.protobuf.FieldMask fields=5;
	TenantFilter filter =6;
}

message ListTenantReply {
	int32 total_size =1;
	int32 filter_size =2;

	repeated Tenant items = 3;
}

message Tenant{
	string id=1;
	string name=2;
	string display_name=3;
	string region=4;
	google.protobuf.Timestamp created_at=5;
	google.protobuf.Timestamp updated_at=6;

	repeated TenantConnectionString conn=7;
	repeated TenantFeature features=8;

}

message TenantConnectionString{
	string key=1;
	string value=2;
}

message TenantFeature{
	string key=1;
	string value=2;
}